--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,12 @@
 
-<h1>Sample App</h1>
-<p>
-	This is the home page for the
-	<a href="blah">blah</a>
-</p>
+<div class="center hero-unit">
+	<h1>Welcome to the Sample App</h1>
+	<p>
+		This is the home page for the
+		<a href="blah">blah</a>
+	</p>
+
+	<%= link_to "Sign up now!", signup_path, class: "btn btn-large btn btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
