--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,6 @@
-<% provide(:title, 'Sign up') %>
-<h1>Sign up</h1>
+<% provide(:title, 'Edit user') %>
+<h1>Update your profile</h1>
+
 
 <div class="row">
 	<div class="span6 offset3">
@@ -20,9 +21,12 @@
 			<%= f.label :password_confirmation, "Confirm Password" %>
 			<%= f.password_field :password_confirmation %>
 
-			<%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
+			<%= f.submit "Save changes", class: "btn btn-large btn-primary" %>
 
 		<% end %>
+
+		<% gravatar_for @user %>
+		<a href="http://gravatar.com/emails" target="_blank">change</a>
 
 	</div>
 </div>
