--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -61,10 +61,9 @@ p {
   margin-right: 10px;
   font-size: 1.7em;
   color: white;
-  text-transform: uppercase;
-  letter-spacing: -1px;
-  padding-top: 9px;
-  font-weight: bold;
+  letter-spacing: 5px;
+  padding-top: 7px;
+  /* font-weight: bold; */
   line-height: 1;
   &:hover {
     color: white;
@@ -106,6 +105,9 @@ footer {
   @include box_sizing;
 }
 
+div#map img {
+  max-width: none;
+}
 
 /* sidebar */
 aside {
