--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,9 +1,18 @@
+- provide(:title, 'Map')
+
 :javascript
-  load_map
+  $(document).ready( function() {
+    load_map;
+  } );
 
-#map
+%script(type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false")
 
-%h1 Map
+#map(style="width:100%;height:500px")
+
+%body(onload="load_map();") 
+
+%h1 Map 
 
 #posts
   = render 'posts'
+
