--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -175,3 +175,45 @@ input, textarea, select, .uneditable-input {
   }
 
 }
+
+/* posts */
+
+.posts {
+  list-style: none;
+  margin: 10px 0 0 0;
+  li {
+    padding: 10px 3px;
+    border-top: 1px solid #e8e8e8;
+    &:hover {
+      border: 1px solid #e8e8e8;
+    }
+  }
+}
+.content {
+  display: block;
+}
+.timestamp {
+  color: $grayLight;
+}
+.gravatar {
+  float: left;
+  margin-right: 10px;
+}
+aside {
+  textarea {
+    height: 100px;
+    margin-bottom: 5px;
+  }
+}
+
+.filter {
+  list-style: none;
+  clear: both;
+  height: 30px;
+  li {
+    float:left;
+    padding: 2px;
+    li { clear: both; }
+  }
+}
+
