--- a/app/views/users/_posts.html.haml
+++ b/app/views/users/_posts.html.haml
@@ -1,5 +1,11 @@
 - if @posts.count > 0
   - @posts.each do |post|
-    %p= post.content
+    %li{onclick: "google.maps.event.trigger(markerArray[" + post.user_id.to_s + "],'click');"}
+      %span.user
+        = link_to post.user.name, post.user
+      %span.content
+        = post.content
+      %span.timestamp
+        Posted #{time_ago_in_words(post.created_at)} ago.
 - else
   %p No posts
