map ajax user panel works

--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -106,12 +106,6 @@ function bindInfo(marker, map, uid) {
 
 function showInSidePanel(uid) {
 
-  	$("#user").fadeOut('fast', function() {
-
-        $('#user').load('../map.php?do=user&id=' + uid, function() {
-             $("#user").fadeIn('fast');
-        });
-
-  	});
+	$("#user").load('/users/' + uid);
 
 }
