initialise new posts

--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -106,6 +106,16 @@ function bindInfo(marker, map, uid) {
 
 function showInSidePanel(uid) {
 
-	$("#user").load('/users/' + uid);
+
+
+  $("#user").fadeOut('fast', function() {
+
+	//$("#user").load('/users/' + uid);
+
+        $('#user').load('/users/' + uid, function() {
+             $("#user").fadeIn('fast');
+        });
+
+  });
 
 }
