Initial appraisals commit

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -13,7 +13,7 @@
                 Account
                 %span.caret
               %ul.dropdown-menu
-                %li= link_to "Profile", current_user
+                %li= link_to "Your Feedback", "/appraisals"
                 %li= link_to "Settings", edit_user_path(current_user)
                 %li.divider
                 %li
