--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -216,3 +216,16 @@ aside {
   }
 }
 
+/* posts */
+
+.fb_nav {
+  list-style: none;
+  li {
+    padding:5px;
+    &:hover {
+      background-color: #75b9ff;
+      color: white;
+      text-decoration: none;
+    }
+  }
+}
