start on charts for feedback

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -143,7 +143,7 @@ input, textarea, select, .uneditable-input {
   border: 1px solid #bbb;
   width: 100%;
   height: auto;
-  margin-bottom: 15px;
+  margin-bottom: 5px;
   @include box_sizing;
 }
 
@@ -216,16 +216,105 @@ aside {
   }
 }
 
-/* posts */
 
-.fb_nav {
+
+/**** cases ****/
+
+/* case index * /
+
+.posts {
+  list-style: none;
+  margin: 10px 0 0 0;
+  li {
+    padding: 10px 3px;
+    border-top: 1px solid #e8e8e8;
+    &:hover {
+      border: 1px solid #e8e8e8;
+    }
+  }
+}
+.content {
+  display: block;
+}
+.timestamp {
+  color: $grayLight;
+}
+
+/* case show */
+
+.case_comment {
+  background-color: $grayLighter;
+  border: 1px solid $grayLight;
+  padding: 5px;
+  margin: 5px;
+}
+
+.case_score {
+  padding: 10px;
+  margin:5px;
+  width:40px;
+  text-align:center;
+  font-size:130%;
+  font-weight:bold;
+}
+
+/* case form */
+
+.case_nav {
   list-style: none;
   li {
     padding:5px;
+    color: black;
     &:hover {
-      background-color: #75b9ff;
-      color: white;
+      color: gray;
       text-decoration: none;
     }
   }
+}
+.case_form {
+  textarea {
+    height: 50px;
+    margin-bottom: 5px;
+    /* margin-top: -12px; */
+    width:300px;
+  }
+}
+
+.slider {
+  width: 252px;
+  float: left;
+  margin-top:10px;
+  margin-right:10px;
+  margin-left:6px;
+  z-index:0;
+}
+
+.slider_input {
+  border:0;
+  height:30px;
+  font-size:150%;
+  color:#b9b9b9;
+  font-weight:bold;
+  text-align:center;
+  width:30px;
+  text-align:center;
+}
+.field_text {
+  width:300px;
+  margin-bottom:5px;
+}
+
+.case_block_title {
+  color: gray;
+  border-bottom: 1px solid $grayLighter;
+  width: 300px;
+  margin-bottom: 5px;
+  margin-top: 5px;
+}
+.case_block_desc {
+  color: gray;
+  width: 100%;
+  font-size:80%;
+  margin-top:-7px;
+  margin-bottom:5px;
 }
