--- a/app/views/cases/_nav.html.haml
+++ b/app/views/cases/_nav.html.haml
@@ -1,9 +1,9 @@
 %ul.case_nav
   %li
-    = link_to "Analysis", "/cases/analysis"
+    = link_to "Analysis", "/analysis"
   %li
     = link_to "Send feedback", "/cases/new"
   %li
-    = link_to "Request feedback", ""
+    = link_to "Request feedback", "/request"
   %li
     = link_to "Cases", "/cases"
