--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -67,6 +67,6 @@
       = render template: 'posts/index'
 
   .span6
-    #map(style="width:100%;height:600px")
+    #map.map(style="width:100%;height:600px")
   .span3
     #user
