--- a/app/views/cases/new.html.haml
+++ b/app/views/cases/new.html.haml
@@ -11,77 +11,78 @@
         .row(style="margin-bottom:15px;")
           .span4
             .field_text
-              = f.text_field :user_id, placeholder: "Partner id"
+              = f.text_field :user_id, placeholder: "Partner id", tabindex: "1"
             .field_text
-              = f.text_field :email, placeholder: "Partner email"
+              = f.text_field :email, placeholder: "Partner email", tabindex: "2"
             .field_text         
-              = f.text_field :date, placeholder: "Date", id: "datepicker"
+              = f.text_field :date, placeholder: "Date", id: "datepicker", tabindex: "3"
           .span5
             .field
-              = f.text_area :subject, placeholder: "Subject"
+              = f.text_area :subject, placeholder: "Subject", tabindex: "4"
             .field_text         
-              = f.text_field :source, placeholder: "Source"
+              = f.text_field :source, placeholder: "Source", tabindex: "5"
 
         .row(style="margin-bottom:10px;")
           .span4
             #case_block
               .case_block_title
                 Plan
-              #plan_slider.slider
+              #plan.slider
               .slider_value
-                = f.text_field :plan, placeholder: "1", class: "slider_input", id: "plan_slider_input", name: "plan_slider_input"
+                = f.text_field :plan, placeholder: "1", class: "slider_input", tabindex: "-1"
               .case_block_desc
                 Brief instructions on how to score and comment
               .field
-                = f.text_area :plan_s, placeholder: "Comment..."
+                = f.text_area :plan_s, placeholder: "Comment...", tabindex: "6"
             #case_block
               .case_block_title
                 Structure
-              #struc_slider.slider
+              #struc.slider
               .slider_value
-              = f.text_field :struc, placeholder: "1", class: "slider_input", id: "struc_slider_input", name: "struc_slider_input"
+              = f.text_field :struc, placeholder: "1", class: "slider_input", tabindex: "-1"
               .case_block_desc
                 Brief instructions on how to score and comment  
               .field
-                = f.text_area :struc_s, placeholder: "Comment..."
+                = f.text_area :struc_s, placeholder: "Comment...", tabindex: "8"
             #case_block
               .case_block_title
                 Communication
-              #comms_slider.slider
+              #comms.slider
               .slider_value
-              = f.text_field :comms, placeholder: "1", class: "slider_input", id: "comms_slider_input", name: "comms_slider_input"
+              = f.text_field :comms, placeholder: "1", class: "slider_input", tabindex: "-1"
               .case_block_desc
                 Brief instructions on how to score and comment
               .field
-                = f.text_area :comms_s, placeholder: "Comment..."
+                = f.text_area :comms_s, placeholder: "Comment...", tabindex: "10"
           .span5
             #case_block
               .case_block_title
                 Analytical/Problem Solving
-              #analytic_slider.slider
+              #analytic.slider
               .slider_value
-              = f.text_field :analytic, placeholder: "1", class: "slider_input", id: "analytic_slider_input", name: "analytic_slider_input"
+              = f.text_field :analytic, placeholder: "1", class: "slider_input", tabindex: "-1"
               .case_block_desc
                 Brief instructions on how to score and comment
               .field
-                = f.text_area :analytic_s, placeholder: "Comment..."
+                = f.text_area :analytic_s, placeholder: "Comment...", tabindex: "7"
             #case_block
               .case_block_title
                 Conclusion/Solution
-              #conc_slider.slider
+              #conc.slider
               .slider_value
-              = f.text_field :conc, placeholder: "1", class: "slider_input", id: "conc_slider_input", name: "conc_slider_input"
+              = f.text_field :conc, placeholder: "1", class: "slider_input", tabindex: "-1"
               .case_block_desc
                 Brief instructions on how to score and comment
               .field
-                = f.text_area :conc_s, placeholder: "Comment..."
+                = f.text_area :conc_s, placeholder: "Comment...", tabindex: "9"
 
         .row
           .span9
             .field
-              = f.text_area :comment, placeholder: "Any further comments", :style=>'width: 620px;'
+              = f.text_area :comment, placeholder: "Any further comments", :style=>'width: 620px;', tabindex: "11"
 
-            = f.submit "Submit", class: "btn btn-large btn-inverse", :style=>'float: right;margin-right:80px;'
+            = f.hidden_field :marker_id, :value => current_user.id
+            = f.submit "Submit", class: "btn btn-large btn-inverse", :style=>'float: right;margin-right:80px;', tabindex: "12"
 
 :javascript
   //$(document).ready(function(){
@@ -96,8 +97,8 @@
       max: 10,
       value: 1,
       slide: function(event, ui) {
-        $("input[name=" + $(this).attr("id") + "_input]").val(ui.value);
-        $("input[name=" + $(this).attr("id") + "_input]").css( 'color', '#6db9ff' )
+        $("input[name=case\[" + $(this).attr("id") + "\]").val(ui.value);
+        $("input[name=case\[" + $(this).attr("id") + "\]").css( 'color', '#6db9ff' )
       }
     });
   });
