--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -21,10 +21,16 @@
       = f.label :lng, "Longitude"
       = f.text_field :lng, id: "lng"
       = f.label :country, "Country"
-      = f.text_field :country, id: "country"
+      = f.text_field :country
       = f.label :city, "City"
-      = f.text_field :city, id: "city"
+      = f.text_field :city
 
+      = f.label :email_admin, "Receive case interview advice email letter"
+      = f.check_box :email_admin
+
+      = f.label :email_users, "Send notifications from users to your email"
+      = f.check_box :email_users
+      %br
       = f.submit "Create my account", class: "btn btn-large btn-primary"
   .span7
     #map.map{:style => "height:450px; width:100%"}
