--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -4,6 +4,8 @@
   %h3
     / = gravatar_for @user
     = @user.name
+    %br
+    = @user.id
 
 %section(style="margin-top:30px;")
   %p
@@ -40,7 +42,8 @@
     Notify     
     %span.caret
 %section
-  = render 'notify_form'
+  #notify_form(style="display:none;margin-top:30px;")
+    = render 'notify_form'
 
 :javascript
   $('#notify_show').click(function() {
