--- a/app/views/user_mailer/message_email.html.haml
+++ b/app/views/user_mailer/message_email.html.haml
@@ -4,9 +4,9 @@
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
   %body
     %h1
-      You have been sent a message on casenexus.com, #{@user.name}
+      You have been sent a message on casenexus.com
     %p
-      your email address is: #{@user.email}.
+      Your email address is #{@user.email}.
       %br/
     %p
       To login to the site, just follow this link: #{@url}.
