--- a/app/views/user_mailer/message_email.text.erb
+++ b/app/views/user_mailer/message_email.text.erb
@@ -1,7 +1,7 @@
-You have been sent a message on casenexus.com, <%= @user.name %>
+You have been sent a message on casenexus.com
 ===============================================
  
-your email is: <%= @user.email %>.
+Your email is <%= @user.email %>.
  
 To login to the site, just follow this link: <%= @url %>.
  
