--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -6,7 +6,7 @@
       - if signed_in?
         %ul.nav.pull-left
           %li= link_to "Users", users_path
-          %li= link_to "Roulette", help_path
+          %li= link_to "Roulette", '/roulette'
         %ul.nav.pull-right
           %li= link_to "Help", help_path
           %li#fat-menu.dropdown
