--- a/app/views/users/_post_filter.html.haml
+++ b/app/views/users/_post_filter.html.haml
@@ -1,45 +1,51 @@
+:javascript
+  function getposts() {
+    //alert("hello!");
+    //$($(this).attr("id")).innerHTML;
+  }
+
+
 %ul.filter
+
   %li
     .btn-group
       %button.btn.dropdown-toggle{"data-toggle" => "dropdown"}
         Country
         %span.caret
       %ul.dropdown-menu
-        %li
-          %a{:href => "#"} United Kingdom
-        %li
-          %a{:href => "#"} United Status of America
-        %li
-          %a{:href => "#"} Venezuela
 
+        - n = 0
+        - @countries.each do |country|
+
+          %li(onclick="getposts();")
+            = link_to country.country, "#"
+
+          - n = n + 1
   %li
     .btn-group
       %button.btn.dropdown-toggle{"data-toggle" => "dropdown"}
         City
         %span.caret
       %ul.dropdown-menu
-        %li
-          %a{:href => "#"} Ipswich
-        %li
-          %a{:href => "#"} London
-        %li
-          %a{:href => "#"} Norwich
 
+        - n = 0
+        - @cities.each do |city|
+
+          %li{onclick: "getposts();"}
+            = link_to city.city, "#"
+
+          - n = n + 1
   %li
     .btn-group
       %button.btn.dropdown-toggle{"data-toggle" => "dropdown"}
         Skill
         %span.caret
       %ul.dropdown-menu
-        %li
-          %a{:href => "#"} Beginner
-        %li
-          %a{:href => "#"} Novice
-        %li
-          %a{:href => "#"} Intermediate
-        %li
-          %a{:href => "#"} Advanced
-        %li
-          %a{:href => "#"} God
-        %li
-          %a{:href => "#"} Victor Cheng-like
+
+        - n = 0
+        - @skills.each do |skill|
+
+          %li{onclick: "getposts();"}
+            = link_to skill.skill, "#"
+
+          - n = n + 1
