--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -8,12 +8,21 @@
 
 .row
   %aside.span3
-    #post_form
-      = render 'post_form'
-    #post_filter
-      = render 'post_filter'
-    #post_list(style="overflow:auto;height:400px;")
-      = render template: 'posts/index'
+    / #post_form
+    /   = render 'post_form'
+
+    / #post_list(style="overflow:auto;height:400px;")
+    /   = render template: 'posts/index'
+
+    = form_tag posts_path, :method => 'get', :id => "posts_search" do
+      #post_filter
+        = render 'post_filter'
+      %p
+        = text_field_tag :search, params[:search]
+        = submit_tag "Search", :name => nil
+      #posts
+        =render 'posts'
+
 
   .span6
     #map.map(style="width:100%;height:600px")
