--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,12 +1,25 @@
-%ol.posts
-  - if @posts.count > 0
-    - @posts.each do |post|
-      %li{onclick: "google.maps.event.trigger(markerArray[" + post.user_id.to_s + "],'click');"}
-        %span.user
-          = link_to post.user.name, post.user
-        %span.content
-          = post.content
-        %span.timestamp
-          Posted #{time_ago_in_words(post.created_at)} ago.
-  - else
-    %p No posts
+/ %ol.posts
+/   - if @posts.count > 0
+/     - @posts.each do |post|
+/       %li{onclick: "google.maps.event.trigger(markerArray[" + post.user_id.to_s + "],'click');"}
+/         %span.user
+/           = link_to post.user.name, post.user
+/         %span.content
+/           = post.content
+/         %span.timestamp
+/           Posted #{time_ago_in_words(post.created_at)} ago.
+/   - else
+/     %p No posts
+
+/ %tr
+/   %th= sortable "user_id"
+/   %th= sortable "content"
+/   / %th= sortable "released_at", "Released"
+
+= form_tag posts_path, :method => 'get', :id => "posts_search" do
+
+  %p
+    = text_field_tag :search, params[:search]
+    = submit_tag "Search", :name => nil
+  #posts
+    =render 'posts'
