--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -105,8 +105,43 @@ footer {
   @include box_sizing;
 }
 
+
+/* maps */
+
+
 .map img {
   max-width: none;
+}
+
+#map {
+  position:absolute;
+  left:0px;
+  top:40px;
+  z-index:0;
+  width:100%;
+  height:100%;
+}
+
+.mappanel {
+  position:absolute;
+  background-color:white;
+  padding:20px;
+  margin:20px;
+  z-index:20;
+}
+
+#mappanel_posts {
+
+  left:100px;
+  top:40px;
+  width:300px;
+
+}
+
+#mappanel_user {
+  right:0px;
+  top:40px;
+  width:200px;
 }
 
 /* sidebar */
@@ -162,49 +197,49 @@ input, textarea, select, .uneditable-input {
 
 /* users index */
 
-.users {
-  list-style: none;
-  margin: 0;
-  li {
-    overflow: auto;
-    padding: 10px 0;
-    border-top: 1px solid $grayLighter;
-    &:last-child {
-      border-bottom: 1px solid $grayLighter
-    }
-  }
+// .users {
+//   list-style: none;
+//   margin: 0;
+//   li {
+//     overflow: auto;
+//     padding: 10px 0;
+//     border-top: 1px solid $grayLighter;
+//     &:last-child {
+//       border-bottom: 1px solid $grayLighter
+//     }
+//   }
 
-}
+// }
 
 /* posts */
 
-.posts {
-  list-style: none;
-  margin: 10px 0 0 0;
-  li {
-    padding: 10px 3px;
-    border-top: 1px solid #e8e8e8;
-    &:hover {
-      border: 1px solid #e8e8e8;
-    }
-  }
-}
-.content {
-  display: block;
-}
-.timestamp {
-  color: $grayLight;
-}
-.gravatar {
-  float: left;
-  margin-right: 10px;
-}
-aside {
-  textarea {
-    height: 100px;
-    margin-bottom: 5px;
-  }
-}
+// .posts {
+//   list-style: none;
+//   margin: 10px 0 0 0;
+//   li {
+//     padding: 10px 3px;
+//     border-top: 1px solid #e8e8e8;
+//     &:hover {
+//       border: 1px solid #e8e8e8;
+//     }
+//   }
+// }
+// .content {
+//   display: block;
+// }
+// .timestamp {
+//   color: $grayLight;
+// }
+// .gravatar {
+//   float: left;
+//   margin-right: 10px;
+// }
+// aside {
+//   textarea {
+//     height: 100px;
+//     margin-bottom: 5px;
+//   }
+// }
 
 .filter {
   list-style: none;
@@ -216,13 +251,36 @@ aside {
   }
 }
 
+table.posts {
+  border-collapse: collapse;
+}
+
+.posts td, .posts th {
+  padding: 4px 10px;
+  border: solid 1px #AAA;
+}
+
+.posts th .current {
+  padding-right: 12px;
+  background-repeat: no-repeat;
+  background-position: right center;
+}
+
+.posts th .asc {
+  background-image: url(up_arrow.gif);
+}
+
+.posts th .desc {
+  background-image: url(down_arrow.gif);
+}
 
 
 /**** cases ****/
 
+
 /* case index * /
 
-.posts {
+.cases {
   list-style: none;
   margin: 10px 0 0 0;
   li {
@@ -340,4 +398,5 @@ aside {
     background-color: $grayLighter;
   }
 }
+
 
