--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,5 +12,5 @@
       - flash.each do |key, value|
         = content_tag(:div, value, class: "alert alert-#{key}")
       = yield
-      = render 'layouts/footer'
+      / = render 'layouts/footer'
       / <haml:loud> debug(params) if Rails.env.development? </haml:loud>
