--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,31 +1,36 @@
 - provide(:title, 'Map')
 
+
 %script(type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false")
 
 %body(onload="load_map();")
 
-%h1 Map 
+#map.map
 
-.row
-  %aside.span3
-    / #post_form
-    /   = render 'post_form'
+#mappanel_posts.mappanel
+  #post_form
+    = render 'post_form'
 
-    / #post_list(style="overflow:auto;height:400px;")
-    /   = render template: 'posts/index'
+  = form_tag posts_path, :method => 'get', :id => "posts_search" do
 
-    = form_tag posts_path, :method => 'get', :id => "posts_search" do
-      #post_filter
-        = render 'post_filter'
-      %p
-        = text_field_tag :search, params[:search]
-        = submit_tag "Search", :name => nil
-      #posts
-        =render 'posts'
+    / AJAX POST FILTER SYSTEM
+    / TO BE RE-VISITED LATER WITH EXPERT HELP
+    / #post_filter
+    /   = render 'posfilter'
 
+    / #filter_form(style="display:none;")
+    / = collection_select(nil, :search, @countries, :country, :country, {:prompt => true})
+    / = collection_select(nil, :search, @cities, :city, :city, {:prompt => true})
+    / = collection_select(nil, :search, @skills, :skill, :skill, {:prompt => true})
+    / TO BE RE-VISITED LATER WITH EXPERT HELP
 
-  .span6
-    #map.map(style="width:100%;height:600px")
-    
-  .span3
-    #user
+    %p
+      = text_field_tag :search, params[:search]
+      / = submit_tag "Search", :name => nil
+
+    #posts
+      =render 'posts'
+
+#mappanel_user.mappanel
+  #user
+    hello
